--- a/07-blockquote-br.html
+++ b/07-blockquote-br.html
@@ -8,7 +8,7 @@
 <body>
   <blockquote>
     <p>
-      &euro;우리가 할 수 있는 노력은 과정이 전부야. <br /> 결과는 우리 손 안에 있는게 아니야.
+      &euro;우리가 할 수 있는 노력은 과정이 전부야. <br> 결과는 우리 손 안에 있는게 아니야.
     </p>
     <cite>드라마 <em>&lt;미생&gt;</em> 중에서</cite> 
   </blockquote>
